--- a/public/index.html
+++ b/public/index.html
@@ -1,38 +1,18 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>nice website</title>
-    <style>
-        input {
-            display: block;
-        }
-    </style>
+  <meta charset="UTF-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Document</title>
 </head>
 <body>
-    <a href="/private">private route for users only</a>
-    <h3>register form</h3>
-    <form action="/api/user/register" method="post">
-        <label for="name">name : </label>
-        <input type="text" name="name" id="name">
-        <label for="email">email : </label>
-        <input type="text" name="email" id="email">
-        <label for="password">password : </label>
-        <input type="password" name="password" id="password">
-        <button type="submit">register</button>
-    </form>
-    <br>
-    <h3>login form</h3>
-    <form action="/api/user/login" method="post">
-        <label for="email">email : </label>
-        <input type="text" name="email" id="email">
-        <label for="password">password : </label>
-        <input type="password" name="password" id="password">
-        <button type="submit">login</button>
-    </form>
-
-    <script src="index.js"></script>
+  <form action="chat.html">
+    <label for="username">username</label><br>
+    <input type="text" name="uesrname"><br>
+    <label for="room"></label><br>
+    <input type="text" name="room"><br>
+    <input type="submit" value="submit">
+  </form>
 </body>
 </html>
