finished announcement resource

--- a/public/index.html
+++ b/public/index.html
@@ -9,8 +9,8 @@
 <body>
   <form action="chat.html">
     <label for="username">username</label><br>
-    <input type="text" name="uesrname"><br>
-    <label for="room"></label><br>
+    <input type="text" name="username"><br>
+    <label for="room">room</label><br>
     <input type="text" name="room"><br>
     <input type="submit" value="submit">
   </form>
