--- a/public/index.html
+++ b/public/index.html
@@ -6,9 +6,9 @@
       rel="stylesheet"
       href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,700&display=swap"
     />
-    <link rel="icon" type="image/svg+xml" href="/src/favicon.svg" />
+    <link rel="icon" type="image/svg+xml" href="/public/assets/logoVector.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Vite App</title>
+    <title>ESI-HUB</title>
   </head>
   <body>
     <div id="root"></div>
